🐛 fix: update user agent placeholders in subscription configuration for consistency

--- a/apps/admin/public/assets/locales/en-US/subscribe.json
+++ b/apps/admin/public/assets/locales/en-US/subscribe.json
@@ -33,11 +33,11 @@
     "title": "Subscription Configuration",
     "updateError": "Update failed",
     "updateSuccess": "Settings updated successfully",
-    "userAgentLimit": "{userAgent} Restriction",
-    "userAgentLimitDescription": "Enable access restrictions based on {userAgent}",
-    "userAgentList": "{userAgent} Whitelist",
-    "userAgentListDescription": "Allowed {userAgent} for subscription access, one per line. Configured application {userAgent} will be automatically included",
-    "userAgentListPlaceholder": "Enter allowed {userAgent}, one per line",
+    "userAgentLimit": "{{userAgent}} Restriction",
+    "userAgentLimitDescription": "Enable access restrictions based on {{userAgent}}",
+    "userAgentList": "{{userAgent}} Whitelist",
+    "userAgentListDescription": "Allowed {{userAgent}} for subscription access, one per line. Configured application {{userAgent}} will be automatically included",
+    "userAgentListPlaceholder": "Enter allowed {{userAgent}}, one per line",
     "wildcardResolution": "Wildcard Resolution",
     "wildcardResolutionDescription": "Enable wildcard domain resolution for subscriptions"
   },
