--- a/apps/admin/public/assets/locales/zh-CN/subscribe.json
+++ b/apps/admin/public/assets/locales/zh-CN/subscribe.json
@@ -31,11 +31,11 @@
     "title": "订阅配置",
     "updateError": "更新失败",
     "updateSuccess": "设置更新成功",
-    "userAgentLimit": "{userAgent} 限制",
-    "userAgentLimitDescription": "基于 {userAgent} 启用访问限制",
-    "userAgentList": "{userAgent} 白名单",
-    "userAgentListDescription": "允许访问订阅的 {userAgent}，每行一个。已配置的应用程序 {userAgent} 将自动包含",
-    "userAgentListPlaceholder": "输入允许的 {userAgent}，每行一个",
+    "userAgentLimit": "{{userAgent}} 限制",
+    "userAgentLimitDescription": "基于 {{userAgent}} 启用访问限制",
+    "userAgentList": "{{userAgent}} 白名单",
+    "userAgentListDescription": "允许访问订阅的 {{userAgent}}，每行一个。已配置的应用程序 {{userAgent}} 将自动包含",
+    "userAgentListPlaceholder": "输入允许的 {{userAgent}}，每行一个",
     "wildcardResolution": "泛域名解析",
     "wildcardResolutionDescription": "为订阅启用泛域名解析"
   },
